Added controller and db memory functions
